Fleshing it out

--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-Hello <b>world</b>!
+<!DOCTYPE html>
+<html>
+<title>Title Text</title>
+<style>
+body {
+  background-color: #ffd8f9;
+}
+.plain {
+  list-style-type: none;
+}
+ul.publist li {
+  margin-bottom: 10px;
+}
+nav li {
+  display: inline;
+}
+section h1 {
+  font-size: 12pt;
+}
+</style>
+
+<body>
+<header>
+<h1>Page Header</h1>
+<h2>Kevin Andrew</h2>
+
+<!-- Contact -->
+<address>
+        Me!<br/>
+        me.
+</address>
+
+<!-- Navigation -->
+<nav>
+<ul>
+<li>A</li>
+<li>B</li>
+</ul>
+</nav>
+<hr/>
+</header>
+
+<section>
+<header>
+<h1> Projects (In Progress) </h1>
+</header>
+Article Text
+</section>
+
+<section>
+<header>
+<h1> Publications </h1>
+</header>
+<ul class="plain publist">
+<li><div>
+Kevin Andrew<br/>
+Modeling the Cooperative and Adversarial Behaviors of Farmer and Regulator Agents in Vermont's Missisquoi Bay Area<br/>
+<i>Northeast Regional Conference on Complex Systems (NERCCS). 2019.</i><br/>
+[<a href="example.com">pdf</a>]        
+[<a href="example.com">abstract</a>]
+[<a href="example.com">slides (pdf)</a>]
+<details>
+details here
+</details>
+</div></li>
+<li><div>
+Kevin Andrew<br/>
+Article 2<br/>
+[<a>pdf</a>]        
+[<a>abstract</a>]
+[<a>slides (pdf)</a>]
+</div></li>
+</ul>
+</section>
+
+<footer>
+Feet Go Here
+</footer>
+</body>
+</html>
